<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/item_border">
    <TextView
        android:id="@+id/productname_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:textSize="@dimen/textview_fontsize"
        android:textFontWeight="700"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toTopOf="@id/productquantity"
        app:layout_constraintEnd_toStartOf="@id/producttotalcost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/product"
        />
    <TextView
        android:id="@+id/producttotalcost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="@dimen/textview_fontsize"
        app:layout_constraintBottom_toBottomOf="@+id/productname_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/productname_history"
        app:layout_constraintTop_toTopOf="@id/productname_history"
        tools:text="@string/total_cost"
        />
    <TextView
        android:id="@+id/productquantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textview_fontsize"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productname_history"
        tools:text="@string/quantity"
        />
</androidx.constraintlayout.widget.ConstraintLayout>